[package]
name = "pixelconv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
clap = { version = "4.5.39", features = ["derive"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
